# harshit-kaggle-red-teamining

./: .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_ERROR_HANDLING_SUMMARY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  IMPROVEMENT_ANALYSIS.md  README.md  REVOLUTIONARY_ARCHITECTURE.md  REVOLUTIONARY_USAGE_GUIDE.md  TECHNICAL_IMPLEMENTATION.md  demo_enhanced_system.py  docker-compose.yml  main.py  prompt_plan.md  pyproject.toml  spec.md  test_integration.py  test_real_api.py  todo.md
.claude/: settings.local.json
configs/: config.yaml
runbooks/: README.md
scripts/: demo_kaggle_export.py  e2e_test_llama.py  e2e_test_small.py  test_e2e_api.py
seeds/: advanced_redteam.yaml  black_box_analysis.yaml  cot_manip.yaml  deception.yaml  harmful.yaml  hybrid_analysis.yaml  jailbreak.yaml  misinformation.json  pii_leakage.yaml  prompt_injection.yaml  safety_violations.yaml  sandbagging.yaml  system_exfil.yaml  white_box_analysis.yaml
seeds/deception/: tricks.yaml
seeds/harmful_content/: indirect.yaml
tests/: test_async_db.py  test_async_integration.py  test_async_orchestrator.py  test_cost_tracker.py  test_db.py  test_e2e.py  test_enhanced_redteam.py  test_evaluator.py  test_full_pipeline_integration.py  test_health.py  test_integration.py  test_kaggle_compliance.py  test_novelty.py  test_ollama_client.py  test_openrouter_client.py  test_pipeline_integration.py  test_reporter.py  test_revolutionary_pipeline.py  test_runner_attempts.py  test_seeds_mutators.py  test_simple_integration.py  test_smoke_app.py  test_ui.py  test_working_integration.py
(+49 files in other folders)
